<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:padding="@dimen/padding_large">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/title_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_input_hint" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/description_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_input_layout">

            <EditText
                android:id="@+id/description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/description_input_hint"
                android:lines="3" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/date_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintHorizontal_weight="0.75"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/time_input_layout"
            app:layout_constraintTop_toBottomOf="@id/description_input_layout">

            <EditText
                android:id="@+id/date_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/date_input_hint" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/time_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintHorizontal_weight="0.25"
            app:layout_constraintLeft_toRightOf="@id/date_input_layout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_input_layout">

            <EditText
                android:id="@+id/time_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/time_input_hint" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/reminder_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/reminder_check_box_label"
            android:textSize="@dimen/reminder_check_box_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_input_layout" />

        <CheckBox
            android:id="@+id/repeat_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/repeat_check_box_label"
            android:textSize="@dimen/repeat_check_box_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reminder_check_box" />

        <RadioGroup
            android:id="@+id/repeat_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_small"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repeat_check_box"
            tools:visibility="visible">

            <RadioButton
                android:id="@+id/daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_radio_button_label" />

            <RadioButton
                android:id="@+id/weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekly_radio_button_label" />

            <RadioButton
                android:id="@+id/monthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthly_radio_button_label" />

        </RadioGroup>

        <TextView
            android:id="@+id/priority_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/priority_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/priority_label_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repeat_radio_group" />

        <Button
            android:id="@+id/dec_count_button"
            style="@style/IncDecButtonCustomStyle"
            android:text="@string/dec_button_label"
            app:layout_constraintBaseline_toBaselineOf="@id/priority_text_view"
            app:layout_constraintLeft_toRightOf="@id/priority_text_view" />

        <TextView
            android:id="@+id/counter_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:textSize="@dimen/counter_label_text_size"
            app:layout_constraintBaseline_toBaselineOf="@id/priority_text_view"
            app:layout_constraintLeft_toRightOf="@id/dec_count_button"
            tools:text="0" />

        <Button
            android:id="@+id/inc_count_button"
            style="@style/IncDecButtonCustomStyle"
            android:text="@string/inc_button_label"
            app:layout_constraintBaseline_toBaselineOf="@id/priority_text_view"
            app:layout_constraintLeft_toRightOf="@id/counter_text_view" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
